add dataset descriptions and references at the bottom

--- a/hwk3_2.html
+++ b/hwk3_2.html
@@ -767,22 +767,12 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </section>
 <section id="resources" class="level3">
 <h3 class="anchored" data-anchor-id="resources">Resources:</h3>
-<section id="night-light-imagery-data" class="level4">
-<h4 class="anchored" data-anchor-id="night-light-imagery-data">Night Light Imagery Data:</h4>
-<p>NASA (2021) VIIRS Level-1 and Atmospheric Archive &amp; Distribution Active Archive Center. Night Light Imagery for February 7, 2021, and February 16, 2021. Available from: https://ladsweb.modaps.eosdis.nasa.gov/ Access date: 11/15/24</p>
-</section>
-<section id="roads-data" class="level4">
-<h4 class="anchored" data-anchor-id="roads-data">Roads Data:</h4>
-<p>Open Street Map (OSM) (Year Unknown) OSM Roads Free. Available from: https://planet.openstreetmap.org/ Access date: 11/15/24</p>
-</section>
-<section id="houses-data" class="level4">
-<h4 class="anchored" data-anchor-id="houses-data">Houses Data:</h4>
-<p>Open Street Map (OSM) (Year Unknown) OSM Buildings A Free. Available from: https://planet.openstreetmap.org/ Access date: 11/15/24</p>
-</section>
-<section id="socioeconomic-data" class="level4">
-<h4 class="anchored" data-anchor-id="socioeconomic-data">Socioeconomic Data:</h4>
-<p>US Census Bureau’s American Community Survey (2019) ACS 2019 5YR Tract 48. Available from: https://www.census.gov/programs-surveys/acs Access date: 11/15/24</p>
-</section>
+<ul>
+<li><p><a href="https://planet.openstreetmap.org/">NASA</a> VIIRS Level-1 and Atmospheric Archive &amp; Distribution Active Archive Center. Night Light Imagery for February 7, 2021, and February 16, 2021. [Data] <em>Access date: 11/15/24</em></p></li>
+<li><p><a href="https://planet.openstreetmap.org/">Open Street Map (OSM)</a> OSM Roads Free, Year Unknown [Data] <em>Access date: 11/15/24</em></p></li>
+<li><p><a href="https://planet.openstreetmap.org/">Open Street Map (OSM)</a> OSM Buildings A Free, Year Unkown [Data] <em>Access date: 11/15/24</em></p></li>
+<li><p><a href="https://www.census.gov/programs-surveys/acs">US Census Bureau’s American Community Survey</a> ACS 2019 5YR Tract 48, 2019 [Data] <em>Access date: 11/15/24</em></p></li>
+</ul>
 </section>
 
 </main>
